[tool.poetry]
name = "mlflow_project"
version = "0.1.0"
description = ""
authors = ["Heiko Kulinna <Heikokulinna@gmx.de>"]

[tool.poetry.dependencies]
python = ">= 3.8.4, < 3.9"
python-dotenv = "^0.19.1"
mlflow = "^1.21.0"


[tool.poetry.dev-dependencies]
black = "^21.10b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
